--- a/index.css
+++ b/index.css
@@ -496,6 +496,11 @@ header {
   }
 
   .packs button {
+    width: 100%;
+    height: 3.5rem;
+    font-size: 1.5rem;
+  }
+  .packs button {
     background-color: #d8c3eb;
     border: none;
     z-index: 1;
@@ -506,7 +511,6 @@ header {
     padding: 0.75rem 2rem; 
     border-radius: 8px;
   }
-  
   
 
   .packs-container {
